and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

November 18, 2014 G.Cosmo (global-V10-00-44)
- G4FPEDetection.hh: added call to 'sigfillset' to clear any signals
  before any use of sigset_t in InvalidOperationDetection() for both
  MacOS and Linux, as suggested in specifications.

November 17, 2014 M.Kelsey
- G4FPEDetection.hh: restrict FPE trapping to GCC only, excluding CLang.
  Addresses problem with Qt generating an apparent FPE deep inside its
  code with MacOSX CLang builds.

November 7, 2014 G.Cosmo (global-V10-00-43/42)
- Coherent use of 'thread_local' keyword for c++11, when supported.
- Updated dates and tag-ID for release 10.1.

November 6, 2014 V.Ivantchenko
- G4StatDouble: corrected use 'const' interface for Add() method.

November 5, 2014 A.Dotti (global-V10-00-41)
- Added missing G4GLOB_DLL specification for DLL import/export to
  G4CacheDetails specialization of cache reference for double.

October 24, 2014 J.Apostolakis A.Dotti (global-V10-00-39,-40)
- Adding template class G4TWorkspacePool.

October 24, 2014 A.Dotti (global-V10-00-38)
- Introduced G4Threading enum to hold thread IDs constants.
- G4MTcoutDestination now supports special non-worker threads for
  which the ID makes no sense.

October 16, 2014 A.Dotti (global-V10-00-37)
- Fixed G4ThreadLocalSingleton destructor.

October 16, 2014 A.Dotti (global-V10-00-36)
- Introduced G4MUTEXDESTROY macro.

October 9, 2014 A.Dotti (global-V10-00-35)
- Adding methods G4MTcoutDestination::GetPrefixString() and
  G4MTcoutDestination::GetFullPrefixString() that return the
  thread cout identification prefix respectively without and
  with thread ID. Requested by visualization.

September 23, 2014 G.Cosmo (global-V10-00-34)